new table begin

--- a/index.html
+++ b/index.html
@@ -162,7 +162,30 @@
             border-collapse: collapse;
             margin-bottom: 5px;
           "
-        ></table>
+        >
+        <thead style="font-size: 8px; font-weight: 600;">
+          <tr>
+            <th style="
+                border: 0.5px solid #979797;
+                text-align: center;
+                width: 1%;
+                white-space: nowrap;
+              ">#</th>
+            <th style="
+                border: 0.5px solid #979797;
+                text-align: center;
+                width: 1%;
+                white-space: nowrap;
+              ">Subjects</th>
+            <th style="
+                border: 0.5px solid #979797;
+                text-align: center;
+                width: 1%;
+                white-space: nowrap;
+              ">First test</th>
+          </tr>
+        </thead>
+      </table>
       </div>
     </div>
   </body>
