--- a/index.html
+++ b/index.html
@@ -163,29 +163,163 @@
             margin-bottom: 5px;
           "
         >
-        <thead style="font-size: 8px; font-weight: 600;">
-          <tr>
-            <th style="
-                border: 0.5px solid #979797;
-                text-align: center;
-                width: 1%;
-                white-space: nowrap;
-              ">#</th>
-            <th style="
-                border: 0.5px solid #979797;
-                text-align: center;
-                width: 1%;
-                white-space: nowrap;
-              ">Subjects</th>
-            <th style="
-                border: 0.5px solid #979797;
-                text-align: center;
-                width: 1%;
-                white-space: nowrap;
-              ">First test</th>
-          </tr>
-        </thead>
-      </table>
+          <thead style="font-size: 8px; font-weight: 600">
+            <tr>
+              <th
+                style="
+                  border: 0.5px solid #979797;
+                  text-align: center;
+                  width: 0.5%;
+                  white-space: nowrap;
+                "
+              >
+                #
+              </th>
+              <th
+                style="
+                  border: 0.5px solid #979797;
+                  text-align: center;
+                  white-space: nowrap;
+                "
+              >
+                Subjects
+              </th>
+              <th
+                style="
+                  border: 0.5px solid #979797;
+                  text-align: center;
+                  white-space: nowrap;
+                "
+              >
+                First test
+              </th>
+              <th
+                style="
+                  border: 0.5px solid #979797;
+                  text-align: center;
+                  white-space: nowrap;
+                "
+              >
+                Mid test
+              </th>
+              <th
+                style="
+                  border: 0.5px solid #979797;
+                  text-align: center;
+                  white-space: nowrap;
+                "
+              >
+                Exams
+              </th>
+              <th
+                style="
+                  border: 0.5px solid #979797;
+                  text-align: center;
+                  white-space: nowrap;
+                "
+              >
+                Total Score Obtained
+              </th>
+              <th
+                style="
+                  border: 0.5px solid #979797;
+                  text-align: center;
+                  width: 0.8%;
+                  white-space: nowrap;
+                "
+              >
+                Grade
+              </th>
+              <th
+                style="
+                  border: 0.5px solid #979797;
+                  text-align: center;
+                  white-space: nowrap;
+                "
+              >
+                Remark
+              </th>
+            </tr>
+          </thead>
+          <tbody style="font-size: 8px; color: #090909">
+            <tr>
+              <td
+                style="
+                  border: 0.5px solid #979797;
+                  text-align: center;
+                  width: 0.5%;
+                  white-space: nowrap;
+                "
+              >
+                1
+              </td>
+              <td
+                style="
+                  border: 0.5px solid #979797;
+                  text-align: center;
+                  white-space: nowrap;
+                "
+              >
+                English Language
+              </td>
+              <td
+                style="
+                  border: 0.5px solid #979797;
+                  text-align: center;
+                  white-space: nowrap;
+                "
+              >
+                10
+              </td>
+              <td
+                style="
+                  border: 0.5px solid #979797;
+                  text-align: center;
+                  white-space: nowrap;
+                "
+              >
+                10
+              </td>
+              <td
+                style="
+                  border: 0.5px solid #979797;
+                  text-align: center;
+                  white-space: nowrap;
+                "
+              >
+                10
+              </td>
+              <td
+                style="
+                  border: 0.5px solid #979797;
+                  text-align: center;
+                  white-space: nowrap;
+                "
+              >
+                100
+              </td>
+              <td
+                style="
+                  border: 0.5px solid #979797;
+                  text-align: center;
+                  width: 0.8%;
+                  white-space: nowrap;
+                "
+              >
+                100
+              </td>
+              <td
+                style="
+                  border: 0.5px solid #979797;
+                  text-align: center;
+                  white-space: nowrap;
+                "
+              >
+                Excellent
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </body>
