Started the key to grade section

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
           </tr>
         </table>
 
+        <!-- Result table -->
         <table
           width="100%"
           cellpadding="6px"
@@ -163,6 +164,7 @@
             margin-bottom: 5px;
           "
         >
+          <!-- Result table header -->
           <thead style="font-size: 8px; font-weight: 600">
             <tr>
               <th
@@ -241,6 +243,8 @@
               </th>
             </tr>
           </thead>
+
+          <!-- Result table body -->
           <tbody style="font-size: 8px; color: #090909">
             <tr>
               <td
@@ -320,6 +324,12 @@
             </tr>
           </tbody>
         </table>
+
+        <div
+          style="border: 0.5px solid #979797; padding: 4px 16px; width: 100%; box-sizing: border-box;"
+        >
+          <span>Key to Grades</span>
+        </div>
       </div>
     </div>
   </body>
