--- a/index.html
+++ b/index.html
@@ -325,10 +325,93 @@
           </tbody>
         </table>
 
+        <!-- Key to grades -->
         <div
-          style="border: 0.5px solid #979797; padding: 4px 16px; width: 100%; box-sizing: border-box;"
+          style="
+            border: 0.5px solid #979797;
+            padding: 4px 16px;
+            width: 100%;
+            box-sizing: border-box;
+            margin-bottom: 51px;
+          "
         >
-          <span>Key to Grades</span>
+          <span style="font-size: 8px; font-weight: 600; color: #090909"
+            >Key to Grades</span
+          >
+        </div>
+
+        <div
+          style="
+            display: grid;
+            grid-template-columns: repeat(12, 1fr);
+            gap: 28px;
+            width: 100%;
+          "
+        >
+          <div style="grid-column: span 6">
+            <!-- Principal's Comment -->
+            <div style="display: flex; flex-direction: column; gap: 3px">
+              <span style="font-size: 8px; color: #7d8592"
+                >Principal's Comment</span
+              >
+              <div
+                style="
+                  border: 0.44px solid #d8e0f0;
+                  border-radius: 6px;
+                  box-sizing: border-box;
+                  padding: 6px 9px;
+                  display: flex;
+                  align-items: center;
+                  height: 25px;
+                "
+              >
+                <span style="font-size: 7px">Good performance </span>
+              </div>
+            </div>
+          </div>
+
+          <!-- Principal's Name -->
+          <div style="grid-column: span 3">
+            <div style="display: flex; flex-direction: column; gap: 3px">
+              <span style="font-size: 8px; color: #7d8592"
+                >Principal's Name</span
+              >
+              <div
+                style="
+                  border: 0.44px solid #d8e0f0;
+                  border-radius: 6px;
+                  box-sizing: border-box;
+                  padding: 6px 9px;
+                  display: flex;
+                  align-items: center;
+                  height: 25px;
+                "
+              >
+                <span style="font-size: 7px">Mr Amadi Austin </span>
+              </div>
+            </div>
+          </div>
+          <!-- Principal's Signature -->
+          <div style="grid-column: span 3">
+            <div style="display: flex; flex-direction: column; gap: 3px">
+              <span style="font-size: 8px; color: #7d8592"
+                >Principal's Signature</span
+              >
+              <div
+                style="
+                  border: 0.44px solid #d8e0f0;
+                  border-radius: 6px;
+                  box-sizing: border-box;
+                  padding: 6px 9px;
+                  display: flex;
+                  align-items: center;
+                  height: 25px;
+                "
+              >
+                <span style="font-size: 7px">Mr Amadi Austin </span>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
