Added the watermark section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,36 @@
       color: #333;
     "
   >
-    <div style="display: flex; justify-content: center; align-items: center">
+    <div
+      style="
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+      "
+    >
+      <!-- Water mark -->
+      <div
+        style="
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%) rotate(-56.26deg);
+          transform-origin: center center;
+          opacity: 0.17;
+          font-size: 40px;
+          font-weight: 600;
+        "
+      >
+        <div style="display: flex; gap: 10px; align-items: center">
+          <img
+            src="https://media.istockphoto.com/id/1496613385/photo/smiling-confident-latin-woman-looking-at-camera.webp?s=2048x2048&w=is&k=20&c=fn4rH9adyFVAaV2v2dd3ZksT8ggvnWDAL4Vo5rBPlMA="
+            height="96px"
+            style="border-radius: 10px"
+          />
+          <span>Kings College Intl. School</span>
+        </div>
+      </div>
       <div
         style="
           display: flex;
