--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div style="display: flex; gap: 10px; align-items: center">
           <img
             src="https://media.istockphoto.com/id/1496613385/photo/smiling-confident-latin-woman-looking-at-camera.webp?s=2048x2048&w=is&k=20&c=fn4rH9adyFVAaV2v2dd3ZksT8ggvnWDAL4Vo5rBPlMA="
-            height="96px"
+            width="96px"
             style="border-radius: 10px"
           />
           <span>Kings College Intl. School</span>
