--- a/result_main.html
+++ b/result_main.html
@@ -10,14 +10,20 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
+    <style>
+      /* make the page exactly A4 and hide overflow */
+      @page {
+        size: A4 portrait;
+        margin: 0;
+      }
+    </style>
   </head>
   <body
     style="
-      margin: 0;
-      padding: 0;
-      background-color: #e8eef8;
+      background-color: #fff;
       font-family: Poppins, sans-serif;
       color: #333;
+      box-sizing: border-box;
     "
   >
     <div
@@ -46,6 +52,7 @@
           white-space: nowrap; /* no line‑breaks inside text */
           width: max-content; /* size to content width */
           overflow: visible; /* let it flow outside */
+          z-index: 100;
         "
       >
         <div style="display: flex; gap: 10px; align-items: center">
@@ -70,9 +77,8 @@
           background-color: #fff;
           align-items: center;
           width: 210mm;
-          height: 297mm;
+          height: 982px;
           overflow: hidden;
-          page-break-after: always;
         "
       >
         <!-- School logo, name, number, address, email -->
